--- a/src/styles.css
+++ b/src/styles.css
@@ -2,7 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
-html, body {
+html,
+body {
   background-color: theme('colors.background');
   color: theme('colors.charcoal');
+  height: 100%;
+}
+
+body {
+  margin: 0;
 }
